# enterprise-observability-platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
architecture/: architecture.drawio
deploy/: otel-collector-config.yaml
deploy/grafana/: datasources.yaml
deploy/helm/observability-platform/: Chart.yaml  values.yaml
deploy/helm/observability-platform/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: deployment.yaml  namespace.yaml  service.yaml
deploy/prometheus/: prometheus.yml
docs/: architecture.md
docs/adrs/: 0001-platform.md
docs/runbooks/: deployment.md
helm/chart/: Chart.yaml
scripts/: bootstrap.sh
src/obsplatform/: __init__.py  collector.py  config.py  logging_config.py  main.py  pipelines.py  telemetry.py
terraform/: main.tf
tests/: test_collector.py  test_health.py
